--- a/src/app/standings-view/standings-table/standings-table.component.html
+++ b/src/app/standings-view/standings-table/standings-table.component.html
@@ -25,6 +25,11 @@
         <td mat-cell *matCellDef="let standing">{{ standing.goalsAllowed }}</td>
     </ng-container>
 
+    <ng-container [matColumnDef]="StandingsColumn.GoalDifferential">
+        <th mat-header-cell *matHeaderCellDef>EM</th>
+        <td mat-cell *matCellDef="let standing">{{ standing.goalDiff }}</td>
+    </ng-container>
+
     <tr mat-header-row *matHeaderRowDef="columns"></tr>
     <tr mat-row *matRowDef="let standing; columns: columns"></tr>
 </table>
