Lisätty uusi kausi

--- a/src/app/standings-view/standings-table/standings-table.component.html
+++ b/src/app/standings-view/standings-table/standings-table.component.html
@@ -26,7 +26,7 @@
     </ng-container>
 
     <ng-container [matColumnDef]="StandingsColumn.GoalDifferential">
-        <th mat-header-cell *matHeaderCellDef>EM</th>
+        <th mat-header-cell *matHeaderCellDef>ME</th>
         <td mat-cell *matCellDef="let standing">{{ standing.goalDiff }}</td>
     </ng-container>
 
