--- a/src/app/standings-view/standings-view/standings-view.component.html
+++ b/src/app/standings-view/standings-view/standings-view.component.html
@@ -1,9 +1,14 @@
 <ng-container *ngIf="standingsState.state | async as state">
-    <app-standings-filter [filterState]="state.filter" (cutOffDateSelect)="filterByDate($event)" (seasonSelect)="changeSeason($event)"></app-standings-filter>
-    <app-standings-table [standings]="state.standings"></app-standings-table>
+    <div class="sidebar">
+        <app-standings-filter [filterState]="state.filter" (cutOffDateSelect)="filterByDate($event)" (seasonSelect)="changeSeason($event)"></app-standings-filter>
+    </div>
+    <div class="content">
+        <app-standings-table [standings]="state.standings"></app-standings-table>
+    </div>
 </ng-container>
-
 
 <div *ngIf="standingsState.isLoading | async" class="spinner-container">
     <mat-spinner></mat-spinner>
 </div>
+
+
