--- a/src/app/standings-view/standings-filter/standings-filter.component.scss
+++ b/src/app/standings-view/standings-filter/standings-filter.component.scss
@@ -1,6 +1,8 @@
 :host {
     display: flex;
-    background: white;
+    flex-direction: column;
+    align-items: center;
+    gap: 2rem;
 
     mat-form-field {
         margin-right: 1rem;
@@ -12,7 +14,7 @@
 
         .filter-label {
             font-size: 0.875rem;
-            color: rgba(0, 0, 0, 0.75);
+            color: white;
             margin-bottom: 0.25rem;
         }
     }
