--- a/src/app/standings-view/standings-view/standings-view.component.scss
+++ b/src/app/standings-view/standings-view/standings-view.component.scss
@@ -1,24 +1,37 @@
 :host {
     position: relative;
-    display: block;
-    background-color: white;
-    box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.25);
-    min-height: 10rem;
+    display: flex;
+    height: 100%;
+
+    * {
+        padding-block: 2rem;
+    }
+
+    .content {
+        background-color: #BABAC3;
+        padding-inline: 2rem;
+        flex: 1;
+    }
+
+    .sidebar {
+        background-color: #232226;
+        flex: 0 0 15rem;
+    }
 }
 
-app-standings-filter {
-    border-bottom: 1px solid rgba(0, 0, 0, 0.25);
-}
-
-app-standings-filter, app-standings-table {
-    padding: 1rem;
+app-standings-table {
+    max-width: 50rem;
 }
 
 .spinner-container {
     position: absolute;
     width: 100%;
-    top: 2rem;
+    height: 100%;
     background-color: rgba(255, 255, 255, 0.4);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0;
     
     mat-spinner {
         margin: auto;
