Lisätty taulukko/kuvaaja-toggle

--- a/src/app/standings-view/standings-chart/standings-chart.component.html
+++ b/src/app/standings-view/standings-chart/standings-chart.component.html
@@ -1,2 +1,2 @@
-<canvas class="chart" baseChart [type]="'line'" [data]="lineChartData" [options]="lineChartOptions" [legend]="true">
+<canvas class="chart" baseChart height="800px" [type]="'line'" [data]="lineChartData" [options]="lineChartOptions" [legend]="true">
 </canvas>
