--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,3 @@
-
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
 @use '@angular/material' as mat;
@@ -20,13 +19,10 @@ $liiga-laskuri-warn: mat.define-palette(mat.$red-palette);
 
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as "color" or "typography".
-$liiga-laskuri-theme: mat.define-light-theme((
-  color: (
-    primary: $liiga-laskuri-primary,
-    accent: $liiga-laskuri-accent,
-    warn: $liiga-laskuri-warn,
-  )
-));
+$liiga-laskuri-theme: mat.define-light-theme((color: (primary: $liiga-laskuri-primary,
+                accent: $liiga-laskuri-accent,
+                warn: $liiga-laskuri-warn,
+            )));
 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
@@ -35,16 +31,20 @@ $liiga-laskuri-theme: mat.define-light-theme((
 
 /* You can add global styles to this file, and also import other style files */
 
-html, body {
-  height: 100%;
+html,
+body {
+    height: 100%;
 }
 
 html {
-  font-size: 16px;
+    font-size: 16px;
 }
 
 body {
-  margin: 0;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
-  background-color: #F0F0F0;
+    margin: 0;
+    background-color: #F0F0F0;
+}
+
+* {
+    font-family: 'Open Sans', "Helvetica Neue", sans-serif;
 }
