--- a/src/app/standings-view/standings-chart/standings-chart.component.html
+++ b/src/app/standings-view/standings-chart/standings-chart.component.html
@@ -1,2 +1,4 @@
-<canvas class="chart" baseChart height="800px" [type]="'line'" [data]="lineChartData" [options]="lineChartOptions" [legend]="true">
-</canvas>
+<div class="chart-container">
+    <canvas class="chart" baseChart [type]="'line'" [data]="lineChartData" [options]="lineChartOptions" [legend]="true">
+    </canvas>
+</div>
