--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,35 +1,9 @@
-// Custom Theming for Angular Material
-// For more information: https://material.angular.io/guide/theming
 @use '@angular/material' as mat;
-// Plus imports for other components in your app.
+@import 'styles/palette.scss';
+@import 'styles/theme.scss';
 
-// Include the common styles for Angular Material. We include this here so that you only
-// have to load a single css file for Angular Material in your app.
-// Be sure that you only ever include this mixin once!
 @include mat.core();
-
-// Define the palettes for your theme using the Material Design palettes available in palette.scss
-// (imported above). For each palette, you can optionally specify a default, lighter, and darker
-// hue. Available color palettes: https://material.io/design/color/
-$liiga-laskuri-primary: mat.define-palette(mat.$indigo-palette);
-$liiga-laskuri-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
-
-// The warn palette is optional (defaults to red).
-$liiga-laskuri-warn: mat.define-palette(mat.$red-palette);
-
-// Create the theme object. A theme consists of configurations for individual
-// theming systems such as "color" or "typography".
-$liiga-laskuri-theme: mat.define-light-theme((color: (primary: $liiga-laskuri-primary,
-                accent: $liiga-laskuri-accent,
-                warn: $liiga-laskuri-warn,
-            )));
-
-// Include theme styles for core and each component used in your app.
-// Alternatively, you can import and @include the theme mixins for each component
-// that you are using.
-@include mat.all-component-themes($liiga-laskuri-theme);
-
-/* You can add global styles to this file, and also import other style files */
+@include mat.all-component-themes($theme);
 
 html,
 body {
