--- a/src/app/standings-view/standings-table/standings-table.component.html
+++ b/src/app/standings-view/standings-table/standings-table.component.html
@@ -35,6 +35,21 @@
         <td mat-cell *matCellDef="let standing">{{ standing.pointsPerGame | number: '1.2-2' }}</td>
     </ng-container>
 
+    <ng-container [matColumnDef]="StandingsColumn.XGFor">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header start="desc">xGF</th>
+        <td mat-cell *matCellDef="let standing">{{ standing.xGFor | number: '1.2-2' }}</td>
+    </ng-container>
+
+    <ng-container [matColumnDef]="StandingsColumn.XGAgainst">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header start="asc">xGA</th>
+        <td mat-cell *matCellDef="let standing">{{ standing.xGAgainst | number: '1.2-2' }}</td>
+    </ng-container>
+
+    <ng-container [matColumnDef]="StandingsColumn.XGDiff">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header start="desc">xGDiff</th>
+        <td mat-cell *matCellDef="let standing">{{ standing.xGDiff | number: '1.2-2' }}</td>
+    </ng-container>
+
     <tr mat-header-row *matHeaderRowDef="columns"></tr>
     <tr mat-row *matRowDef="let standing; columns: columns"></tr>
 </table>
