--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,3 @@
-<app-standings-view></app-standings-view>
+<!-- <app-standings-view></app-standings-view> -->
+<app-nav-bar></app-nav-bar>
+<router-outlet></router-outlet>
