--- a/src/app/standings-view/standings-view/standings-view.component.scss
+++ b/src/app/standings-view/standings-view/standings-view.component.scss
@@ -7,7 +7,8 @@ $main-palette: map.get($colors, 'primary');
 :host {
     position: relative;
     display: flex;
-    height: 100%;
+    //height: 100%;
+    flex: 1;
 
     > * {
         padding: 2rem;
