--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,3 +22,9 @@ body {
 * {
     font-family: 'Open Sans', "Helvetica Neue", sans-serif;
 }
+
+app-root {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+}
