--- a/src/styles.scss
+++ b/src/styles.scss
@@ -50,3 +50,20 @@ app-root {
         flex: 0 0 13rem;
     }
 }
+
+.filter-bar {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+
+    .filter-container {
+        display: flex;
+        flex-direction: column;
+
+        .filter-label {
+            font-size: 0.875rem;
+            color: white;
+            margin-bottom: 0.25rem;
+        }
+    }
+}
