Sekalaisia parannuksia sarjataulukkonäkymään

--- a/src/app/standings-view/standings-table/standings-table.component.html
+++ b/src/app/standings-view/standings-table/standings-table.component.html
@@ -1,4 +1,4 @@
-<table mat-table [dataSource]="dataSource" matSort [matSortActive]="StandingsColumn.Points">
+<table class="table" mat-table [dataSource]="dataSource" matSort [matSortActive]="StandingsColumn.Points">
 
     <ng-container [matColumnDef]="StandingsColumn.TeamName">
         <th mat-header-cell *matHeaderCellDef></th>
