--- a/src/app/standings-view/standings-table/standings-table.component.scss
+++ b/src/app/standings-view/standings-table/standings-table.component.scss
@@ -1,46 +1,9 @@
-@use '@angular/material' as mat;
-@use 'sass:map';
-@import './../../../styles/theme.scss';
-
-$main-palette: map.get($colors, 'primary');
-
 :host {
     display: block;
     box-shadow: 0px 0px 8px rgba(black, 0.35);
 }
 
-table {
-    table-layout: fixed;
-    width: 100%;
-    font-size: 0.875rem;
-
-    tr.mat-mdc-row, tr.mat-mdc-header-row {
-        height: 2.5rem;
-    }
-
-    tr.mat-mdc-header-row {
-        background-color: rgba(mat.get-color-from-palette($main-palette, 500), 0.75);
-        
-
-        th.mat-mdc-header-cell {
-            color: white;
-            font-weight: 600;
-        }
-    }
-
-    tr.mat-mdc-row {
-        background-color: mat.get-color-from-palette($main-palette, '900-contrast');
-
-        td.mat-mdc-cell {
-            border-bottom: 1px solid rgba(black, 0.2);
-        }
-
-        td.mat-column-TeamName {
-            font-weight: 700;
-        }
-    }
-
-    .mat-sort-header-arrow {
-        color: white;
-    }
+table.table tr.mat-mdc-row td.mat-mdc-cell.mat-column-TeamName {
+    font-weight: 800;
+    text-align: left;
 }
