--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -1,11 +1,10 @@
+@use '@angular/material' as mat;
 @import './palette.scss';
 
-$liiga-laskuri-primary: mat.define-palette($palette);
-$liiga-laskuri-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
-$liiga-laskuri-warn: mat.define-palette(mat.$red-palette);
-$theme: mat.define-light-theme((color: (
+$liiga-laskuri-primary: mat.m2-define-palette($palette);
+$theme: mat.m2-define-light-theme((color: (
     primary: $liiga-laskuri-primary,
-    accent: $liiga-laskuri-accent,
-    warn: $liiga-laskuri-warn,
+    accent: $liiga-laskuri-primary,
+    warn: $liiga-laskuri-primary,
 )));
-$colors: mat.get-color-config($theme);
+$colors: mat.m2-get-color-config($theme);
