--- a/src/app/teams-view/teams-view/teams-view.component.scss
+++ b/src/app/teams-view/teams-view/teams-view.component.scss
@@ -14,3 +14,8 @@ h2 {
         border-bottom: 1px solid rgba(black, 0.4);
     }
 }
+
+mat-spinner {
+    margin-inline: auto;
+    margin-top: 5rem;
+}
