--- a/src/app/standings-view/standings-view/standings-view.component.scss
+++ b/src/app/standings-view/standings-view/standings-view.component.scss
@@ -19,17 +19,7 @@ app-standings-table {
     max-width: 60rem;
 }
 
-.spinner-container {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(white, 0.4);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 0;
-    
-    mat-spinner {
-        margin: auto;
-    }
+mat-spinner {
+    margin-inline: auto;
+    margin-top: 5rem;
 }
